--- a/html/assignment/Assignment_1.html
+++ b/html/assignment/Assignment_1.html
@@ -6,6 +6,62 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <header>
+  <h1>NRUP PATHAK</h1>
+  <h3>I am a student of GLA University</h3>
+  <img src="a.jpg" alt="photo of nrup" style="width:200px; height:200px; border-radius:50%;">
+  </header>
+  <ul>
+    <li>Email: nruppathak@gmail.com</li>
+    <li>Phone: 9690994936</li>
+    <li><a href="https://www.linkedin.com/in/nrup-pathak-b3b566338?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></li>
+  </ul>
+    <p>
+  Hello! My name is <b>nrup pathak</b>, and I’m a passionate <i>web developer</i> with a strong focus on 
+  <u>front-end design</u>. I enjoy creating <b><i>interactive</i></b> and <u>user-friendly</u> websites that bring ideas to life. 
+  When I’m not coding, I love exploring new tech trends and improving my skills.
+</p>
+<table style="border:1px solid black; border-collapse:collapse; width:80%;">
+  <tr>
+    <th style="border:1px solid black; padding:8px;">Year</th>
+    <th style="border:1px solid black; padding:8px;">Degree</th>
+    <th style="border:1px solid black; padding:8px;">Institute</th>
+  </tr>
+  <tr>
+  <td style="border:1px solid black; padding:8px;">2024</td>
+  <td style="border:1px solid black; padding:8px;">B.Tech</td>
+  <td style="border:1px solid black; padding:8px;">GLA</td>
+  </tr>
+</table>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>Python</li>
+  <li>Java</li>
+</ul>
+<div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;">
+  <h4>Portfolio Website</h4>
+  <p>A personal website built using <b>HTML</b>, <b>CSS</b>, and <b>JavaScript</b> to showcase my skills, resume, and contact info.</p>
+</div>
+
+<div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;">
+  <h4>To-Do List App</h4>
+  <p>A simple yet functional to-do list application developed with <i>React</i>, featuring task filtering, completion tracking, and local storage.</p>
+</div>
+
+<div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;">
+  <h4>Weather Dashboard</h4>
+  <p>This project uses the <u>OpenWeather API</u> to display current weather and forecasts based on user location. Built with JavaScript and styled with Bootstrap.</p>
+</div>
+<ul>
+  <li>📚 basket ball</li>
+  <li>🎮 Gaming</li>
+  <li>🎵 Listening to Music</li>
+  <li>✈ Traveling</li>
+  <li>🎨 Drawing</li>
+</ul>
+<footer>
+  <p>&copy; 2025 nrup pathak</p>
+</footer>
 </body>
 </html>
